--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>
-      SSS Accounting & Tax Solutions - Financial Services Website Template
+      SSS Accounting & Tax Solutions
     </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="keywords" />
@@ -120,6 +120,7 @@
             <a href="index.html" class="nav-item  nav-link">HOME</a>
             <a href="about.html" class="nav-item nav-link active">ABOUT</a>
             <a href="service.html" class="nav-item nav-link">SERVICES</a>
+            <a href="artical.html" class="nav-item nav-link">ARTICAL</a>
             <!-- modified -->
             <!-- <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
