--- a/artical.html
+++ b/artical.html
@@ -120,7 +120,7 @@
             <a href="index.html" class="nav-item  nav-link">HOME</a>
             <a href="about.html" class="nav-item nav-link">ABOUT</a>
             <a href="service.html" class="nav-item nav-link">SERVICES</a>
-            <a href="artical.html" class="nav-item nav-link">ARTICAL</a>
+            <a href="artical.html" class="nav-item nav-link active">ARTICAL</a>
             <!-- modified -->
             <!-- <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -132,7 +132,7 @@
                             <a href="404.html" class="dropdown-item">404 Page</a>
                         </div>
                     </div> -->
-            <a href="contact.html" class="nav-item nav-link active">CONTACT</a>
+            <a href="contact.html" class="nav-item nav-link">CONTACT</a>
           </div>
           <div class="d-none d-lg-flex ms-2">
             <a class="btn btn-light btn-sm-square rounded-circle ms-3" href="https://www.facebook.com/profile.php?id=61564463548424">
@@ -156,106 +156,64 @@
       data-wow-delay="0.1s"
     >
       <div class="container">
-        <h1 class="display-3 mb-4 animated slideInDown">Contact</h1>
+        <h1 class="display-3 mb-4 animated slideInDown">Artical</h1>
         <nav aria-label="breadcrumb animated slideInDown">
           <ol class="breadcrumb mb-0">
             <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Contact</li>
+            <li class="breadcrumb-item active" aria-current="page">Artical</li>
           </ol>
         </nav>
       </div>
     </div>
     <!-- Page Header End -->
-
-    <!-- Contact Start -->
-    <div class="container-xxl py-5">
-      <div class="container">
-        <div class="row g-5">
-          <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-            <p
-              class="d-inline-block border rounded text-primary fw-semi-bold py-1 px-3"
-            >
-              Contact
-            </p>
-            <h1 class="display-5 mb-4">
-              If You Have Any Query, Please Contact Us
-            </h1>
-            <form>
-              <div class="row g-3">
-                <div class="col-md-6">
-                  <div class="form-floating">
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="name"
-                      placeholder="Your Name"
-                    />
-                    <label for="name">Your Name</label>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-floating">
-                    <input
-                      type="email"
-                      class="form-control"
-                      id="email"
-                      placeholder="Your Email"
-                    />
-                    <label for="email">Your Email</label>
-                  </div>
-                </div>
-                <div class="col-12">
-                  <div class="form-floating">
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="subject"
-                      placeholder="Subject"
-                    />
-                    <label for="subject">Subject</label>
-                  </div>
-                </div>
-                <div class="col-12">
-                  <div class="form-floating">
-                    <textarea
-                      class="form-control"
-                      placeholder="Leave a message here"
-                      id="message"
-                      style="height: 100px"
-                    ></textarea>
-                    <label for="message">Message</label>
-                  </div>
-                </div>
-                <div class="col-12">
-                  <button class="btn btn-primary py-3 px-5" type="submit">
-                    Send Message
-                  </button>
-                </div>
-              </div>
-            </form>
+<!-- PDF Download Section Start -->
+<div class="container-xxl py-5">
+    <div class="container">
+      <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px">
+        <p class="d-inline-block border rounded text-primary fw-semi-bold py-1 px-3">
+          Downloads
+        </p>
+        <h1 class="display-5 mb-5">Download PDFs</h1>
+      </div>
+      <div class="row">
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="card border-light text-center py-4 px-3">
+            <div class="card-body">
+              <i class="fa fa-file-pdf fa-3x text-danger mb-3"></i>
+              <h5 class="card-title mb-3">INDIA BUDGET FOR THE FY 2024-25</h5>
+              <a href="pdf/INDIA BUDGET FOR THE FY 2024-25.pdf" class="btn btn-primary" download>
+                <i class="fa fa-download me-2"></i> Download
+              </a>
+            </div>
           </div>
-          <div
-            class="col-lg-6 wow fadeIn"
-            data-wow-delay="0.5s"
-            style="min-height: 450px"
-          >
-            <div class="position-relative rounded overflow-hidden h-100">
-              <iframe
-                class="position-relative w-100 h-100"
-                src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3606.665266553888!2d75.73018217544168!3d26.975234776609852!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjbCsDU4JzMwLjkiTiA3NcKwNDMnNTcuOSJF!5e1!3m2!1sen!2sin!4v1724126878514!5m2!1sen!2sin"
-                frameborder="0"
-                style="min-height: 450px; border: 0"
-                allowfullscreen=""
-                aria-hidden="false"
-                tabindex="0"
-              ></iframe>
+        </div>
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="card border-light text-center py-4 px-3">
+            <div class="card-body">
+              <i class="fa fa-file-pdf fa-3x text-danger mb-3"></i>
+              <h5 class="card-title mb-3">GST ACT AND RULES</h5>
+              <a href="pdf/GST ACT AND RULES.pdf" class="btn btn-primary" download>
+                <i class="fa fa-download me-2"></i> Download
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 mb-4">
+          <div class="card border-light text-center py-4 px-3">
+            <div class="card-body">
+              <i class="fa fa-file-pdf fa-3x text-danger mb-3"></i>
+              <h5 class="card-title mb-3">BUDGET HIEGHTLIGHTS</h5>
+              <a href="pdf/BUDGET HIEGHTLIGHTS.pdf" class="btn btn-primary" download>
+                <i class="fa fa-download me-2"></i> Download
+              </a>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <!-- Contact End -->
-
+  </div>
+  <!-- PDF Download Section End -->
+  
   <!-- Footer Start -->
   <div class="container-fluid bg-dark text-light footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
     <div class="container py-5">
