--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>
-    SSS Accounting & Tax Solutions - Financial Services Website Template
+    SSS Accounting & Tax Solutions 
   </title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <meta content="" name="keywords" />
@@ -91,6 +91,7 @@
           <a href="index.html" class="nav-item  nav-link active">HOME</a>
           <a href="about.html" class="nav-item nav-link">ABOUT</a>
           <a href="service.html" class="nav-item nav-link">SERVICES</a>
+          <a href="artical.html" class="nav-item nav-link">ARTICAL</a>
           <!-- modified -->
           <!-- <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -193,7 +194,7 @@
             We Help Our Clients To Grow Their Business
           </h1>
           <p class="mb-4">
-            Welcome to SSS Accounting & Tax Solutions, founded in 2002 by CA Umesh Kumar Jethani. We offer a wide range
+            Welcome to SSS Accounting & Tax Solutions, founded in 2020. We offer a wide range
             of professional services in Jaipur, including ITR and GST return filing, GST registration, TDS return
             filing, ROC return filing, accounting, audit services, LLP and company registration, partnership firm
             registration, GST consultancy, OPC registration, DIR-3 KYC, management consultancy, and funding services. We
@@ -645,7 +646,7 @@
               </div>
               <h6 class="font-weight-medium">Accounting & Business Support</h6>
               <p class="mt-3">2499 - DEPEND ON WORK</p>
-              <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+              <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                   Quote</span></a>
             </div>
           </div>
@@ -658,8 +659,8 @@
                 <div class="icon-round text-center d-inline-block rounded-circle bg-success-gradiant">G</div>
               </div>
               <h6 class="font-weight-medium">GST Services</h6>
-              <p class="mt-3">99-999/-</p>
-              <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+              <p class="mt-3">Starting from 99</p>
+              <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                   Quote</span></a>
             </div>
           </div>
@@ -673,7 +674,7 @@
               </div>
               <h6 class="font-weight-medium">Audit and Assurance Services (Internal and External)</h6>
               <p class="mt-3">2499 - DEPEND ON WORK</p>
-              <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+              <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                   Quote</span></a>
             </div>
           </div>
@@ -686,8 +687,8 @@
                 <div class="icon-round text-center d-inline-block rounded-circle bg-success-gradiant">I</div>
               </div>
               <h6 class="font-weight-medium">Income Tax Filing (ITR Filing)</h6>
-              <p class="mt-3">299-1999</p>
-              <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+              <p class="mt-3">Starting from 299</p>
+              <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                   Quote</span></a>
             </div>
           </div>
@@ -700,8 +701,8 @@
                 <div class="icon-round text-center d-inline-block rounded-circle bg-success-gradiant">T</div>
               </div>
               <h6 class="font-weight-medium">TDS & TCS Return Filing</h6>
-              <p class="mt-3">199-599</p>
-              <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+              <p class="mt-3">Starting from 199</p>
+              <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                   Quote</span></a>
             </div>
           </div>
@@ -715,7 +716,7 @@
               </div>
               <h6 class="font-weight-medium">PF & ESI Registration & Return Filing</h6>
               <p class="mt-3">1999 - DEPEND ON WORK</p>
-              <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+              <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                   Quote</span></a>
             </div>
           </div>
@@ -728,8 +729,8 @@
                 <div class="icon-round text-center d-inline-block rounded-circle bg-success-gradiant">C</div>
               </div>
               <h6 class="font-weight-medium">Company Registration</h6>
-              <p class="mt-3">5999-11999</p>
-              <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+              <p class="mt-3">Starting from 5999</p>
+              <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                   Quote</span></a>
             </div>
           </div>
@@ -742,8 +743,8 @@
                 <div class="icon-round text-center d-inline-block rounded-circle bg-success-gradiant">L</div>
               </div>
               <h6 class="font-weight-medium">LLP Registration</h6>
-              <p class="mt-3">4999-8999</p>
-              <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+              <p class="mt-3">Starting from 4999</p>
+              <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                   Quote</span></a>
             </div>
           </div>
@@ -757,7 +758,7 @@
               </div>
               <h6 class="font-weight-medium">MSME Registration</h6>
               <p class="mt-3">399/-</p>
-              <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+              <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                   Quote</span></a>
             </div>
           </div>
@@ -770,8 +771,8 @@
                 <div class="icon-round text-center d-inline-block rounded-circle bg-success-gradiant">I</div>
               </div>
               <h6 class="font-weight-medium">Import Export Services</h6>
-              <p class="mt-3">799-4999</p>
-              <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+              <p class="mt-3">Starting from 799</p>
+              <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                   Quote</span></a>
             </div>
           </div>
@@ -785,7 +786,7 @@
               </div>
               <h6 class="font-weight-medium">E-Tendering</h6>
               <p class="mt-3">GET QUOTE</p>
-              <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+              <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                   Quote</span></a>
             </div>
           </div>
@@ -799,7 +800,7 @@
               </div>
               <h6 class="font-weight-medium">Digital Signature Certificate Provider</h6>
               <p class="mt-3">2199/-</p>
-              <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+              <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                   Quote</span></a>
             </div>
           </div>
@@ -813,7 +814,7 @@
               </div>
               <h6 class="font-weight-medium">CA Certification</h6>
               <p class="mt-3">999/-</p>
-              <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+              <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                   Quote</span></a>
             </div>
           </div>
@@ -827,7 +828,7 @@
               </div>
               <h6 class="font-weight-medium">Stock Valuation</h6>
               <p class="mt-3">GET QUOTE</p>
-              <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+              <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                   Quote</span></a>
             </div>
           </div>
@@ -841,7 +842,7 @@
               </div>
               <h6 class="font-weight-medium">Share Market Tips</h6>
               <p class="mt-3">GET QUOTE</p>
-              <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+              <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                   Quote</span></a>
             </div>
           </div>
@@ -855,7 +856,7 @@
               </div>
               <h6 class="font-weight-medium">All Types of Loans from Banks and NBFCs</h6>
               <p class="mt-3">GET QUOTE</p>
-              <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+              <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                   Quote</span></a>
             </div>
           </div>
@@ -869,7 +870,7 @@
               </div>
               <h6 class="font-weight-medium">Insurance Services</h6>
               <p class="mt-3">GET QUOTE</p>
-              <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+              <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                   Quote</span></a>
             </div>
           </div>
@@ -999,9 +1000,9 @@
       <div class="row g-4">
         <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
           <div class="team-item">
-            <img class="img-fluid rounded" src="img/team-1.jpg" alt="" />
+            <img class="img-fluid rounded" src="img/team-2.jpg" alt="" />
             <div class="team-text">
-              <h4 class="mb-0">Kate Winslet</h4>
+              <h4 class="mb-0">Saurabh Tailor</h4>
               <div class="team-social d-flex">
                 <a class="btn btn-square rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
                 <a class="btn btn-square rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
@@ -1014,7 +1015,7 @@
           <div class="team-item">
             <img class="img-fluid rounded" src="img/team-2.jpg" alt="" />
             <div class="team-text">
-              <h4 class="mb-0">Jac Jacson</h4>
+              <h4 class="mb-0">Sunil Singh Rathore</h4>
               <div class="team-social d-flex">
                 <a class="btn btn-square rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
                 <a class="btn btn-square rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
@@ -1027,7 +1028,7 @@
           <div class="team-item">
             <img class="img-fluid rounded" src="img/team-3.jpg" alt="" />
             <div class="team-text">
-              <h4 class="mb-0">Doris Jordan</h4>
+              <h4 class="mb-0">CA Aditya Gupta</h4>
               <div class="team-social d-flex">
                 <a class="btn btn-square rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
                 <a class="btn btn-square rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
@@ -1040,73 +1041,77 @@
     </div>
   </div>
   <!-- Team End -->
-
-  <!-- Testimonial Start -->
-  <div class="container-xxl py-5">
-    <div class="container">
-      <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px">
-        <p class="d-inline-block border rounded text-primary fw-semi-bold py-1 px-3">
-          Testimonial
-        </p>
-        <h1 class="display-5 mb-5">What Our Clients Say!</h1>
+<!-- Testimonial Start -->
+<div class="container-xxl py-5">
+  <div class="container">
+    <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px">
+      <p class="d-inline-block border rounded text-primary fw-semi-bold py-1 px-3">
+        Testimonial
+      </p>
+      <h1 class="display-5 mb-5">What Our Clients Say!</h1>
+    </div>
+    <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.3s">
+      <div class="testimonial-item">
+        <div class="testimonial-text border rounded p-4 pt-5 mb-5">
+          <div class="btn-square bg-white border rounded-circle">
+            <i class="fa fa-quote-right fa-2x text-primary"></i>
+          </div>
+          SSS Accounting & Tax Solutions has been instrumental in streamlining our accounting processes. Their attention to detail and expertise in tax filing have been a great asset to our business.
+        </div>
+        <!-- <img class="rounded-circle mb-3" src="img/testimonial-1.jpg" alt="" /> -->
+        <div class="rounded-circle mb-3 text-center">
+          <i class="fas fa-user fa-3x text-primary"></i>
+        </div>
+        <h4>Glovin Pharma Pvt. Ltd. (Delhi)</h4>
+        <span>Businessman</span>
       </div>
-      <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.3s">
-        <div class="testimonial-item">
-          <div class="testimonial-text border rounded p-4 pt-5 mb-5">
-            <div class="btn-square bg-white border rounded-circle">
-              <i class="fa fa-quote-right fa-2x text-primary"></i>
-            </div>
-            Dolores sed duo clita tempor justo dolor et stet lorem kasd labore
-            dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore
-            et tempor diam tempor erat.
+      <div class="testimonial-item">
+        <div class="testimonial-text border rounded p-4 pt-5 mb-5">
+          <div class="btn-square bg-white border rounded-circle">
+            <i class="fa fa-quote-right fa-2x text-primary"></i>
           </div>
-          <img class="rounded-circle mb-3" src="img/testimonial-1.jpg" alt="" />
-          <h4>Client Name</h4>
-          <span>Profession</span>
+          The professional and timely services provided by SSS Accounting & Tax Solutions have significantly enhanced our operational efficiency. Highly recommended for all business support needs.
         </div>
-        <div class="testimonial-item">
-          <div class="testimonial-text border rounded p-4 pt-5 mb-5">
-            <div class="btn-square bg-white border rounded-circle">
-              <i class="fa fa-quote-right fa-2x text-primary"></i>
-            </div>
-            Dolores sed duo clita tempor justo dolor et stet lorem kasd labore
-            dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore
-            et tempor diam tempor erat.
+        <!-- <img class="rounded-circle mb-3" src="img/testimonial-2.jpg" alt="" /> -->
+        <div class="rounded-circle mb-3 text-center">
+          <i class="fas fa-user fa-3x text-primary"></i>
+        </div>
+        <h4>Tanay Goyal (Gurugram)</h4>
+        <span>Businessman</span>
+      </div>
+      <div class="testimonial-item">
+        <div class="testimonial-text border rounded p-4 pt-5 mb-5">
+          <div class="btn-square bg-white border rounded-circle">
+            <i class="fa fa-quote-right fa-2x text-primary"></i>
           </div>
-          <img class="rounded-circle mb-3" src="img/testimonial-2.jpg" alt="" />
-          <h4>Client Name</h4>
-          <span>Profession</span>
+          With SSS Accounting & Tax Solutions handling our audits and GST services, we’ve been able to focus more on growing our business. Their expertise is unparalleled.
         </div>
-        <div class="testimonial-item">
-          <div class="testimonial-text border rounded p-4 pt-5 mb-5">
-            <div class="btn-square bg-white border rounded-circle">
-              <i class="fa fa-quote-right fa-2x text-primary"></i>
-            </div>
-            Dolores sed duo clita tempor justo dolor et stet lorem kasd labore
-            dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore
-            et tempor diam tempor erat.
+        <!-- <img class="rounded-circle mb-3" src="img/testimonial-3.jpg" alt="" /> -->
+        <div class="rounded-circle mb-3 text-center">
+          <i class="fas fa-user fa-3x text-primary"></i>
+        </div>
+        <h4>Manoj Sharma (Rajkot)</h4>
+        <span>Businessman</span>
+      </div>
+      <div class="testimonial-item">
+        <div class="testimonial-text border rounded p-4 pt-5 mb-5">
+          <div class="btn-square bg-white border rounded-circle">
+            <i class="fa fa-quote-right fa-2x text-primary"></i>
           </div>
-          <img class="rounded-circle mb-3" src="img/testimonial-3.jpg" alt="" />
-          <h4>Client Name</h4>
-          <span>Profession</span>
+          SSS Accounting & Tax Solutions has provided exceptional service for our company registration and compliance needs. Their team is knowledgeable and reliable.
         </div>
-        <div class="testimonial-item">
-          <div class="testimonial-text border rounded p-4 pt-5 mb-5">
-            <div class="btn-square bg-white border rounded-circle">
-              <i class="fa fa-quote-right fa-2x text-primary"></i>
-            </div>
-            Dolores sed duo clita tempor justo dolor et stet lorem kasd labore
-            dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore
-            et tempor diam tempor erat.
-          </div>
-          <img class="rounded-circle mb-3" src="img/testimonial-4.jpg" alt="" />
-          <h4>Client Name</h4>
-          <span>Profession</span>
+        <!-- <img class="rounded-circle mb-3" src="img/testimonial-4.jpg" alt="" /> -->
+        <div class="rounded-circle mb-3 text-center">
+          <i class="fas fa-user fa-3x text-primary"></i>
         </div>
+        <h4>Sandeep Khandewal (Bengaluru)</h4>
+        <span>Businessman</span>
       </div>
     </div>
   </div>
-  <!-- Testimonial End -->
+</div>
+<!-- Testimonial End -->
+
 
   <!-- Footer Start -->
   <div class="container-fluid bg-dark text-light footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
