--- a/service.html
+++ b/service.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>
-      SSS Accounting & Tax Solutions - Financial Services Website Template
+      SSS Accounting & Tax Solutions 
     </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="keywords" />
@@ -120,6 +120,7 @@
             <a href="index.html" class="nav-item  nav-link">HOME</a>
             <a href="about.html" class="nav-item nav-link">ABOUT</a>
             <a href="service.html" class="nav-item nav-link active">SERVICES</a>
+            <a href="artical.html" class="nav-item nav-link">ARTICAL</a>
             <!-- modified -->
             <!-- <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -179,7 +180,7 @@
                 </div>
                 <h6 class="font-weight-medium">Accounting & Business Support</h6>
                 <p class="mt-3">2499 - DEPEND ON WORK</p>
-                <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+                <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                     Quote</span></a>
               </div>
             </div>
@@ -193,7 +194,7 @@
                 </div>
                 <h6 class="font-weight-medium">GST Services</h6>
                 <p class="mt-3">99-999/-</p>
-                <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+                <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                     Quote</span></a>
               </div>
             </div>
@@ -207,7 +208,7 @@
                 </div>
                 <h6 class="font-weight-medium">Audit and Assurance Services (Internal and External)</h6>
                 <p class="mt-3">2499 - DEPEND ON WORK</p>
-                <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+                <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                     Quote</span></a>
               </div>
             </div>
@@ -221,7 +222,7 @@
                 </div>
                 <h6 class="font-weight-medium">Income Tax Filing (ITR Filing)</h6>
                 <p class="mt-3">299-1999</p>
-                <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+                <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                     Quote</span></a>
               </div>
             </div>
@@ -235,7 +236,7 @@
                 </div>
                 <h6 class="font-weight-medium">TDS & TCS Return Filing</h6>
                 <p class="mt-3">199-599</p>
-                <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+                <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                     Quote</span></a>
               </div>
             </div>
@@ -249,7 +250,7 @@
                 </div>
                 <h6 class="font-weight-medium">PF & ESI Registration & Return Filing</h6>
                 <p class="mt-3">1999 - DEPEND ON WORK</p>
-                <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+                <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                     Quote</span></a>
               </div>
             </div>
@@ -263,7 +264,7 @@
                 </div>
                 <h6 class="font-weight-medium">Company Registration</h6>
                 <p class="mt-3">5999-11999</p>
-                <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+                <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                     Quote</span></a>
               </div>
             </div>
@@ -277,7 +278,7 @@
                 </div>
                 <h6 class="font-weight-medium">LLP Registration</h6>
                 <p class="mt-3">4999-8999</p>
-                <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+                <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                     Quote</span></a>
               </div>
             </div>
@@ -291,7 +292,7 @@
                 </div>
                 <h6 class="font-weight-medium">MSME Registration</h6>
                 <p class="mt-3">399/-</p>
-                <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+                <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                     Quote</span></a>
               </div>
             </div>
@@ -305,7 +306,7 @@
                 </div>
                 <h6 class="font-weight-medium">Import Export Services</h6>
                 <p class="mt-3">799-4999</p>
-                <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+                <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                     Quote</span></a>
               </div>
             </div>
@@ -319,7 +320,7 @@
                 </div>
                 <h6 class="font-weight-medium">E-Tendering</h6>
                 <p class="mt-3">GET QUOTE</p>
-                <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+                <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                     Quote</span></a>
               </div>
             </div>
@@ -333,7 +334,7 @@
                 </div>
                 <h6 class="font-weight-medium">Digital Signature Certificate Provider</h6>
                 <p class="mt-3">2199/-</p>
-                <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+                <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                     Quote</span></a>
               </div>
             </div>
@@ -347,7 +348,7 @@
                 </div>
                 <h6 class="font-weight-medium">CA Certification</h6>
                 <p class="mt-3">999/-</p>
-                <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+                <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                     Quote</span></a>
               </div>
             </div>
@@ -361,7 +362,7 @@
                 </div>
                 <h6 class="font-weight-medium">Stock Valuation</h6>
                 <p class="mt-3">GET QUOTE</p>
-                <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+                <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                     Quote</span></a>
               </div>
             </div>
@@ -375,7 +376,7 @@
                 </div>
                 <h6 class="font-weight-medium">Share Market Tips</h6>
                 <p class="mt-3">GET QUOTE</p>
-                <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+                <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                     Quote</span></a>
               </div>
             </div>
@@ -389,7 +390,7 @@
                 </div>
                 <h6 class="font-weight-medium">All Types of Loans from Banks and NBFCs</h6>
                 <p class="mt-3">GET QUOTE</p>
-                <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+                <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                     Quote</span></a>
               </div>
             </div>
@@ -403,7 +404,7 @@
                 </div>
                 <h6 class="font-weight-medium">Insurance Services</h6>
                 <p class="mt-3">GET QUOTE</p>
-                <a class="btn btn-success-gradiant text-white border-0 btn-md" href="contact.html"><span>Get a
+                <a class="btn btn-primary text-white border-0 btn-md" href="contact.html"><span>Get a
                     Quote</span></a>
               </div>
             </div>
